--- a/client/src/assets/css/main/App.scss
+++ b/client/src/assets/css/main/App.scss
@@ -38,7 +38,6 @@
 
 }
 
-  
 .App {
     display: flex;
     flex-direction: column;
@@ -46,41 +45,59 @@
     height: 100vh;
     overflow: hidden;
 
-    // .Body_Content {
 
-        .COMPONENT__Login , .COMPONENT__SignUp, .COMPONENT__AddProduct{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+    .COMPONENT__Login , .COMPONENT__SignUp, .COMPONENT__AddProduct {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-            min-height: calc(100vh - var(--header_height) - var(--footer_height));
-        }
-        .section, .COMPONENT__Hero, .COMPONENT__FeaturedProducts {
-            width: 100%;
-            min-height: calc(100vh - var(--header_height));
-        }
+        min-height: calc(100vh - var(--header_height) - var(--footer_height));
 
-        .SECTION__SinglePage, .COMPONENT__Cart {
-            min-height: calc(100vh - var(--header_height) - var(--footer_height));
-            // overflow-y: scroll;
+        .signUpHere, .loginHere{
+            font-weight: bold;
+            color: var(--bgColor_indigo);
+    
+            &:hover {
+                color: var(--bgColor_indigo_Hover)
+            }
         }
+    }
+    .COMPONENT__Hero, .COMPONENT__FeaturedProducts {
+        width: 100%;
+        min-height: calc(100vh - var(--header_height));
+    }
+    .SECTION__SinglePage, .COMPONENT__Cart {
+        min-height: calc(100vh - var(--header_height) - var(--footer_height));
+        // overflow-y: scroll;
+    }
 
+    
+    .Body_Content {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        
+        overflow-y: scroll;
 
-        .COMPONENT__Hero {
-            background-color: var(--text-gray-900);
-            position: relative;
-        }
-        .COMPONENT__AboutUs{
-            display: flex;
-            flex-direction: column;
-        }
-        .COMPONENT__FeaturedProducts {
+        .PAGE__HomePage{
 
+            .COMPONENT__Hero {
+                background-color: var(--text-gray-900);
+                position: relative;
+            }
+            .COMPONENT__AboutUs{
+                display: flex;
+                flex-direction: column;
+            }
+            .COMPONENT__FeaturedProducts {
+    
+            }
+            .COMPONENT__ContactUs {
+                width: 100%;
+                min-height: calc(100vh - var(--header_height) - var(--footer_height));
+            }
         }
-        .COMPONENT__ContactUs {
-            width: 100%;
-            min-height: calc(100vh - var(--header_height) - var(--footer_height));
-        }
+            
         .COMPONENT__AllProducts{
 
         }
@@ -117,9 +134,6 @@
                 }
             }
         }
-
-
-
         .COMPONENT__Footer{
             display: flex;
             justify-content: center;
@@ -128,241 +142,41 @@
             
             min-height: var(--footer_height);
         }
-
-        .Body_Content{
-            position: relative;
-            
-            display: flex;
-            flex-direction: column;
-            
-            /* max-height: calc( 100vh - var(--headerFooter_height)); */
-            /* height: calc( 100vh - var(--headerFooter_height)); */
-            overflow-y: scroll;
-        }
-        
-        .PAGE__HomePage{
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
-            // flex-direction: column;
-            
-            /* height: 100%; */
-            /* overflow-y: scroll; */
-        }
-        
-        
-        .section{
-            /* min-height: 100vh; */
-        }
-        .topBottom_section{
-            /* min-height: calc(100vh - var(--headerFooter_height)); */
-        }
-        
-        .signUpHere, .loginHere{
-            font-weight: bold;
-            color: var(--bgColor_indigo);
-
-            &:hover {
-                color: var(--bgColor_indigo_Hover)
-            }
-        }
-        
-        .App-link {
-            color: #61dafb;
-        }
-        
-        .cbm-border-bottom {  
-            border-bottom: 1px solid var(--light-gray)
-        }
-        
-    // }
-
-}
-
-.titleBasic{
-    text-align: center;
-    padding: 5px;
-
-}
-
-.btnStyle_clear, .btnStyle{
-    color: white;
-    padding: var(--pixel_Y_1) ;
-    border-radius: 5px;
-}
-
-.btnStyle{ 
-    background-color: var(--bgColor_indigo); 
-
-    &:hover{ 
-        background-color: var(--bgColor_indigo_Hover); 
     }
-}
-
-.btnStyle_clear{ 
-    background-color: var(--bgColor_clear);
-
-    &:hover{ 
-        background-color: var(--bgColor_clear_Hover);
+    
+    .cbm-border-bottom {  
+        border-bottom: 1px solid var(--light-gray)
     }
+
+    .BTN__Clear, .BTN__Indigo{
+        color: white;
+        padding: var(--pixel_Y_1) ;
+        border-radius: 5px;
+    }
+    
+    .BTN__Indigo{ 
+        background-color: var(--bgColor_indigo); 
+    
+        &:hover{ 
+            background-color: var(--bgColor_indigo_Hover); 
+        }
+    }
+    
+    .BTN__Clear{ 
+        background-color: var(--bgColor_clear);
+    
+        &:hover{ 
+            background-color: var(--bgColor_clear_Hover);
+        }
+    }
+
+    .titleBasic{
+        text-align: center;
+        padding: 5px;
+    }
+    
+    
+
 }
-
-
-/* HEADER */
-.Header_styles {
-
-  // .COMPONENT__Header{
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   flex-direction: column;
-  //   border-bottom: 1px solid var(--gray2);
-  //   /* height: 800px; */
-  // }
-  // .Header__Main{
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   width: 100%;
-  //   min-height: var(--header_height);
-  //   border-bottom: 1px solid var(--gray2);
-  
-  // }
-  // .Header_Left, .Header_Right{
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  
-  //   height: 100%;
-  // }
-  // .Header_Left{
-  //   margin-left: 25px;
-  // }
-  // .Header_Right{
-  //   margin-right: 25px;
-  // }
-  // .COMPONENT__MobileNav{
-  //   display: flex;
-  //   position: absolute;
-  //   z-index: 1;
-  //   background-color: violet;
-  //   height: 300px;
-  //   width: 100%;
-  
-  //   top: var(--header_height);
-  // }
-  // .HamburgerIcon{
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   flex-direction: column;
-  
-  //   height: 50px;
-  //   width: 50px;
-  //   cursor: pointer;
-  //   /* border: 1px solid var(--text-gray-hover); */
-  //   border-radius: 10px;
-  // }
-  // .HamburgerIcon:hover{
-  //   border: 1px solid var(--text-gray-hover);
-  // }
-  // .HamburgerIcon:focus{
-  //   background-color: var(--text-gray-hover);
-  // }
-  // .HamburgerLine{
-  //   position: relative;
-  //   display: block;
-  //   width: 20px;
-  //   height: 2px;
-  
-  //   background-color: var(--text-gray);
-  
-  //   margin-top: 2.5px;
-  //   margin-bottom: 2.5px;
-  //   /* padding: 1px; */
-  // }
-  // .HamburgerIcon:focus .HamburgerLine{
-  //   background-color: var(--text-gray-hover);
-  // }
-  // .COMPONENT__HeaderCartIcon_Container{
-  //   display: none;
-  // }
-  // .LogoAnchor{
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  
-  //   height: 50px;
-  //   width: 50px;
-  // }
-  // .LogoImg{
-  //   min-width: 50px;
-  // }
-  
-  // .COMPONENT__HeaderCartIcon_Container{
-  //   /* display: flex; */
-  //   display: none;
-  //   /* flex-direction: column; */
-  //   justify-content: center;
-  //   align-items: center;
-  // }
-  
-  // .COMPONENT__HeaderCart{
-  //   border: 2px solid chartreuse;
-  //   display: absolute;
-  
-  //   z-index: 1;
-  // }
-  
-  // .COMPONENT__MobileNavElements, .COMPONENT__DesktopNavElements{
-  //   color: var(--text-gray);
-  //   font-size: 14px;
-  // }
-  
-  // .COMPONENT__MobileNavElements{
-  //   display: flex;
-  //   justify-content: flex-start;
-  //   align-items: center;
-  //   flex-direction: column;
-  
-  //   position: absolute;
-  //   z-index: 1;
-  //   top: var(--header_height);
-  //   max-height: 0px;
-  //   overflow-y: hidden;
-  
-  //   width: 100%;
-  //   /* border-top: 1px solid var(--gray2); */
-  // } 
-  // .MobileNavLink{
-  //   width: 100%;
-  //   padding-top: 8px;
-  //   padding-bottom: 8px;
-  
-  //   background-color: white;
-  //   border-bottom: 1px solid var(--gray2);
-  // }
-  // .MobileNavLink span{
-  //   margin-left: 30px;
-  // }
-  // .MobileNavLink:hover{
-  //   /* background-color: rgb(255, 213, 255); */
-  //   background-color: var(--text-gray-hover);
-  // }
-  // .COMPONENT__DesktopNavElements{
-  //   justify-content: center;
-  //   align-items: center;
-  
-  //   display: none;
-  // }
-  // .DesktopNavLink{
-  //   /* display: flex; */
-  //   padding: 5px;
-  //   margin-left: 2vw;
-  // }
-}
-
-
-
 
 
