--- a/client/src/assets/css/main/App.css
+++ b/client/src/assets/css/main/App.css
@@ -1,12 +1,12 @@
 * {
   --light-border: rgb(234, 221, 255);
   --gray1: rgb(241, 241, 241);
-  --gray2:rgb(218, 218, 218);
-  --gray3:rgb(148, 148, 148);
+  --gray2: rgb(218, 218, 218);
+  --gray3: rgb(148, 148, 148);
   --text-gray: gray;
   --text-gray-hover: rgb(204, 204, 204);
   --bgColor_ProductCard: rgb(255, 236, 212);
-  --bgColor_indigo: rgb(79,70,229);
+  --bgColor_indigo: rgb(79, 70, 229);
   --bgColor_indigo_Hover: rgb(165, 160, 255);
   --bgColor_clear: rgb(229, 70, 70);
   --bgColor_clear_Hover: rgb(255, 160, 160);
@@ -37,7 +37,9 @@
   overflow: hidden;
 }
 
-.App .COMPONENT__Login, .App .COMPONENT__SignUp, .App .COMPONENT__AddProduct {
+.App .COMPONENT__Login,
+.App .COMPONENT__SignUp,
+.App .COMPONENT__AddProduct {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,21 +52,33 @@
   min-height: calc(100vh - var(--header_height) - var(--footer_height));
 }
 
-.App .COMPONENT__Login .signUpHere, .App .COMPONENT__Login .loginHere, .App .COMPONENT__SignUp .signUpHere, .App .COMPONENT__SignUp .loginHere, .App .COMPONENT__AddProduct .signUpHere, .App .COMPONENT__AddProduct .loginHere {
+.App .COMPONENT__Login .signUpHere,
+.App .COMPONENT__Login .loginHere,
+.App .COMPONENT__SignUp .signUpHere,
+.App .COMPONENT__SignUp .loginHere,
+.App .COMPONENT__AddProduct .signUpHere,
+.App .COMPONENT__AddProduct .loginHere {
   font-weight: bold;
   color: var(--bgColor_indigo);
 }
 
-.App .COMPONENT__Login .signUpHere:hover, .App .COMPONENT__Login .loginHere:hover, .App .COMPONENT__SignUp .signUpHere:hover, .App .COMPONENT__SignUp .loginHere:hover, .App .COMPONENT__AddProduct .signUpHere:hover, .App .COMPONENT__AddProduct .loginHere:hover {
+.App .COMPONENT__Login .signUpHere:hover,
+.App .COMPONENT__Login .loginHere:hover,
+.App .COMPONENT__SignUp .signUpHere:hover,
+.App .COMPONENT__SignUp .loginHere:hover,
+.App .COMPONENT__AddProduct .signUpHere:hover,
+.App .COMPONENT__AddProduct .loginHere:hover {
   color: var(--bgColor_indigo_Hover);
 }
 
-.App .COMPONENT__Hero, .App .COMPONENT__FeaturedProducts {
+.App .COMPONENT__Hero,
+.App .COMPONENT__FeaturedProducts {
   width: 100%;
   min-height: calc(100vh - var(--header_height));
 }
 
-.App .SECTION__SinglePage, .App .COMPONENT__Cart {
+.App .SECTION__SinglePage,
+.App .COMPONENT__Cart {
   min-height: calc(100vh - var(--header_height) - var(--footer_height));
 }
 
@@ -97,7 +111,7 @@
 
 .App .Body_Content .PAGE__HomePage .COMPONENT__ContactUs {
   width: 100%;
-  min-height: calc(100vh - var(--header_height) - var(--footer_height));
+  min-height: calc( 100vh - var(--header_height) - var(--footer_height));
 }
 
 .App .Body_Content .COMPONENT__AddProduct .inputProduct-form {
@@ -120,7 +134,9 @@
       grid-template-columns: 50% 50%;
 }
 
-.App .Body_Content .COMPONENT__AddProduct .inputProduct-form h1, .App .Body_Content .COMPONENT__AddProduct .inputProduct-form div, .App .Body_Content .COMPONENT__AddProduct .inputProduct-form button {
+.App .Body_Content .COMPONENT__AddProduct .inputProduct-form h1,
+.App .Body_Content .COMPONENT__AddProduct .inputProduct-form div,
+.App .Body_Content .COMPONENT__AddProduct .inputProduct-form button {
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
@@ -149,7 +165,8 @@
   border-bottom: 1px solid var(--light-gray);
 }
 
-.App .BTN__Clear, .App .BTN__Indigo {
+.App .BTN__Clear,
+.App .BTN__Indigo {
   color: white;
   padding: var(--pixel_Y_1);
   border-radius: 5px;
